[project]
name = "personal-library-manager-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "plotly-express>=0.4.1",
    "pymongo>=4.11.2",
    "streamlit>=1.43.2",
]
