[project]
name = "personal-library-manager-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.164.0",
    "google-genai>=1.5.0",
    "litellm>=1.63.7",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "plotly-express>=0.4.1",
    "pymongo>=4.11.2",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.2",
]
